# corewar

./: .gitignore  Makefile
asm/: Makefile  asm
asm/includes/: asm.h  op.h
asm/libft/includes/: libft.h  libftprintf.h
asm/libft/srcs/ft/: ft_strrchr.c  ft_strstr.c  new_table.c
asm/srcs/: check_label.c  main.c
asm/srcs/parse/: parse_champion.c
res/: main.c
res/champs/: Car.s
vm/: CMakeLists.txt  Makefile  a.out  corewar  lol  maxidef  maxidef.cor  maxidef.s
vm/corewar.dSYM/Contents/Resources/DWARF/: corewar
vm/includes/: op.h  operation.h  vm.h
vm/libft/: Makefile
vm/libft/includes/: libft.h
vm/libft/srcs/ft/: free_table.c  ft_atoi.c  ft_strjoin.c  ft_strmap.c  ft_strsplit.c
vm/libft/srcs/ft_printf/: parse.c  type_color.c
vm/srcs/: main.c  op.c
vm/srcs/logic/: init.c  operation.c  validation.c
vm/srcs/logic/operation/: ld.c  live.c  op.c  operation.c
vm/srcs/parse/: parse_champion.c  parse_n.c  parse_n.h  parse_n_utils.c
